--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Bird.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="Frog.cs" />
     <Compile Include="MathOps.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
