--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -43,13 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorName.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Frog.cs" />
     <Compile Include="MathOps.cs" />
+    <Compile Include="Polygon.cs" />
+    <Compile Include="Polygon1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quote.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="SequenceDetector.cs" />
   </ItemGroup>
   <ItemGroup>
