Added and udated examples
Added example for field/property. Added example of a property being overridden.

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Car.cs" />
     <Compile Include="Frog.cs" />
     <Compile Include="MathOps.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Polygon.cs" />
     <Compile Include="Polygon1.cs" />
     <Compile Include="Program.cs" />
