Added Interface example
IUnaryOperation and class Increment.

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Bird.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Frog.cs" />
+    <Compile Include="IUnaryOperation.cs" />
     <Compile Include="MathOps.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Polygon.cs" />
