Added example "Animal.cs"
This example will be an example of implementing an abract class.

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
     <Compile Include="AuthorName.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="Car.cs" />
