--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AuthorName.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="Fib1.cs" />
     <Compile Include="Frog.cs" />
     <Compile Include="IUnaryOperation.cs" />
     <Compile Include="MathOps.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Quote.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="SequenceDetector.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
