--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Bird.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Fib1.cs" />
+    <Compile Include="Fib2.cs" />
     <Compile Include="FibConsole.cs" />
     <Compile Include="Frog.cs" />
     <Compile Include="IUnaryOperation.cs" />
