--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Bubble.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Collection.cs" />
+    <Compile Include="EnumTest.cs" />
     <Compile Include="Fib1.cs" />
     <Compile Include="Fib2.cs" />
     <Compile Include="Fib3.cs" />
