--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Room.cs" />
     <Compile Include="SequenceDetector.cs" />
     <Compile Include="String.cs" />
+    <Compile Include="StringReverse.cs" />
     <Compile Include="WordCount.cs" />
   </ItemGroup>
   <ItemGroup>
