--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Car.cs" />
     <Compile Include="Collection.cs" />
     <Compile Include="EnumTest.cs" />
+    <Compile Include="ExceptionEx.cs" />
     <Compile Include="Fib1.cs" />
     <Compile Include="Fib2.cs" />
     <Compile Include="Fib3.cs" />
