--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IUnaryOperation.cs" />
     <Compile Include="LamdaEx.cs" />
     <Compile Include="MathOps.cs" />
+    <Compile Include="MergeSort.cs" />
     <Compile Include="Pangrams.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Pikachu.cs" />
