--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -63,6 +63,7 @@
     <Compile Include="HackerRank.cs" />
     <Compile Include="IUnaryOperation.cs" />
     <Compile Include="LamdaEx.cs" />
+    <Compile Include="Loops.cs" />
     <Compile Include="MathOps.cs" />
     <Compile Include="MergeSort.cs" />
     <Compile Include="Person.cs" />
